# VGSM

./: .gitignore  .prettierignore  README.md  auth.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prettier.config.cjs  proxy.ts  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/actions/: action-actions.ts  api-key-actions.ts  auth-actions.ts  beta-keys-actions.ts  case-actions.ts  command-actions.ts  community-actions.ts  community-role-actions.ts  demo-actions.ts  discord-actions.ts  dispatch-actions.ts  (+16 more)
components/: AboutCard.tsx  Gallery.tsx  HighlightsGrid.tsx  LinkList.tsx  MacWindow.tsx  ProfileClient.tsx  ProfileHeader.tsx  SettingsDrawer.tsx  ShareSheet.tsx  ToggleSwitch.tsx
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: decisions.md  deploy.md  desktop.md  integrations-discord.md  map.md  next.md  security-soc.md  security.md
lib/: config.ts  db.ts  downloads.ts  errors.ts  hooks.ts  icons.ts  permissions.ts  presenters.ts  rate-limit.ts  storage.ts  utils.ts
prisma/: schema.prisma  seed.ts
scripts/: clean-next-types.mjs  owner-disable-2fa.mjs  owner-unlock.mjs  reset-owner-password.mjs
tests/: api-key-auth.test.ts  audit-integrity.test.ts  auth-password.test.ts  authorize.test.ts  commands-schema.test.ts  dispatch-transitions.test.ts  invite-validation.test.ts  pagination.test.ts  permissions.test.ts  rate-limit.test.ts  security-events.test.ts  security-permissions.test.ts  tenant-map.test.ts  totp-encryption.test.ts
types/: next-auth.d.ts
(+319 files in other folders)
